# qurrium

./: .gitignore  .gitmodules  CITATION.bib  Cargo.toml  LICENSE  MANIFEST.in  README.md  __init__.py  attrdict.py  configuration.py  get_version.py  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  rust-toolchain.toml  setup-no-abi3.py  setup.py  tagmaps.py  tox.ini
.github/: wheel-draft.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/: README.md
.github/actions/test-unit/: action.yml
.github/deprecated/workflow/: wheel-nightly.yml
.github/unused/: README.md
.github/unused/workflow/: wheel-nightly-abandon01.yml  wheel-nightly-deprecated241117.yml  wheel-nightly-draft01.yml
.github/workflows/: draft-release.txt  draft-release.yml  python-package.yml  release-nightly.yml  release-stable.yml  release.yml  requirement.txt  test-unit.yml  test.yml  wheel-draft.yml  wheel-nightly.yml  wheel-stable.yml  wheel.txt  wheel.txt.yml  wheel.yml
case/: __init__.py  case.py  entangled.py  paramagnet.py  type.py  xyssh_sim.py
case/deprecated/: entangled.py
crates/: AboutBoorust.md  README.md
crates/boorust/: Cargo.toml
crates/boorust/src/: construct.rs  hadamard.rs  lib.rs  main.rs  tool.rs
crates/boorust/src/randomized/: construct.rs  echo.rs  entropy.rs  entropy_2.rs  mod.rs  randomized.rs
crates/boorust/src/randomized/echo/: v1.rs  v2.rs
crates/boorust/src/randomized/entropy/: mod.rs  v1.rs  v2.rs
deprecated/: XProcEntropyMeasure.py  XProcPlotSphere.py  XProcUniversal.py  document.txt  libcustom.py  templateJobManage.py
deprecated/chiralOperator/: diqubits.py
deprecated/experiment/: devNote.md
deprecated/experiment/qurrent/: main.py  params.py
deprecated/jupyter/measureEntropy/: __init__.py  compare.py  export.py
deprecated/process/: general.py  quick.py
deprecated/process/measureEntropy/: __init__.py  deprecated.py  main.py  params.py
deprecated/type/: __init__.py  cat.py  topParamagnet.py  trivialParamagnet.py  twoSiteSOC.py
docs/: 01_Basic_Usage.ipynb  02_Export_Result_of_Qurry.ipynb  03_The_True_Power_of_Qurry.ipynb  README.md
docs/appendix/: A01_BackendManager.ipynb
docs/main/: 01_Basic_Usage.ipynb  02_The_True_Power_of_Qurry.ipynb  0311a_EntropyRandomizedMeasure.ipynb  0311b_EntropyRandomizedMeasure.ipynb  0312_EntropyHadamardTest.ipynb  0313a_EntropyRandomizedMeasureV1.ipynb  0313b_EntropyRandomizedMeasureV1.ipynb  03_Just_Post_Processing.ipynb
instruction/: basic measurement.ipynb
instruction/.ipynb_checkpoints/: basic measurement-checkpoint.ipynb
plot/: draw.py  widget.py
qaia/Qassist/: collectresutls.py  z2ssh_v3.py
qurmagsq/: __init__.py  qurmagsq.py
qurrech/: __init__.py  haarMeasure.py  hadamardTest.py  qurrech.py
qurrent/: __init__.py  haarMeasure.py  hadamardTest.py  qurrent.py  qurrentExperiment.py  qurrentV1.py
qurrent/qurrentV2/: haarMeasure.py  hadamardTest.py  qurrentV2.py
qurrium/: __init__.py  exceptions.py  qurry.py  randomized.py  type.py
qurrium/backup/: __init__.py  attrdict.py  configuration.py  tagmaps.py
qurrium/mori/: __init__.py  tagmaps.py
qurry/: VERSION.txt  __init__.py  exceptions.py  hoshi.py  qurry.py  qurry_demo.py  version.py
qurry/boost/: __init__.py  inputfixer.c  inputfixer.pyi  inputfixer.pyx  randomized.c  randomized.pyi  randomized.pyx
qurry/capsule/: .gitignore  __init__.py  exception.py  jsonablize.py  quick.py
qurry/capsule/hoshi/: __init__.py  hoshi.py  repr_modify.py
qurry/capsule/mori/: __init__.py  config.py  csvlist.py  gitsync.py  taglist.py  utils.py
qurry/case/: __init__.py  case.py
qurry/declare/: __init__.py  default.py  experiment.py  multimanager.py  qurrium.py  transpile.py  type.py
qurry/declare/run/: __init__.py  base_run.py  ibm.py  simulator.py
qurry/mori/: README.md  __init__.py  argrecord.py  configuration.py  gitsync.py  jsonablize.py
qurry/mori/tagmaps/: quantity.py  tagmaps.py
qurry/mori_deprecated/: __init__.py  argrecord.py
qurry/process/: __init__.py  availability.py  exceptions.py  hadamard_test.py
qurry/process/classical_shadow/: __init__.py  (+5 more)
qurry/qurmagsq/: __init__.py  qurmagsq.py
qurry/qurrech/: HadamardTest.py  RandomizedMeasure.py  __init__.py  haarMeasure.py  hadamaed_test.py  hadamardTest.py  qurrech.py  qurrentHaarV4.py  qurrentHadamardV4.py  randomized_measure.py
qurry/qurrent/: HadamardTest.py  RandomizedMeasure.py  __init__.py  haarMeasure.py  hadamardTest.py  hadamard_test.py  postprocess.py  qurrent.py  qurrentHaarV4.py  qurrentHadamardV4.py  qurrentV4.py  randomized_measure.py
qurry/qurrium/: __init__.py  analysis.py  construct.py  experiment.py  extend.py  multimanager.py  qurrium.py  qurrium_dev.py  qurry.py  qurryV3.py  qurryV4.py  qurryV5.py  randomized.py  runargs.py  samplingqurry.py  type.py  wavesqurry.py
qurry/qurstrop/: __init__.py  qurstrop.py
qurry/recipe/: __init__.py  exceptions.py  n_body.py  recipe.py
qurry/tool/: __init__.py  backend.py  command.py  draw.py  watch.py
qurry/tools/: __init__.py  backend.py  command.py  datetime.py  draw.py  parallelmanager.py  poolmanager.py  processManager.py  processmanager.py  progressbar.py  qiskit_version.py  watch.py
qurry/util/: __init__.py  backend.py  command.py  draw.py  watch.py
qurry/visual/: __init__.py  errorbar.py  multichart.py  quench.py  qurchart.py
qurry/visualization/: config.py  draw.py  drawerPlanB.py  widget.py
qurstrop/: qurstrop.py
tests/: test_canonical_version.py  test_construct.py  test_qurrech.py  test_qurrent.py  test_qurrium.py  test_qurstrop.py  test_randomized.py
tests/process/: easy-dummy.json  test_ensemble_cell.py  test_hadamard.py  test_randomized.py  trivial_paramagnet_04.json  trivial_paramagnet_06.json
tests/qurrium/: random_unitary_seeds.json  test_qurrech.py  test_qurrent.py  test_qurrium.py
tool/: __init__.py  command.py  configuration.py  datasaving.py  draw.py  jsonablize.py
tool/backup/: jsonablize.py  loading.py
tools/: README.md  get_version.py  package_name.txt  set_pyproject_qurry.py  set_rename.sh  set_version.py
(+199 files in other folders)
