[build-system]
requires = ["pytest", "cython", "setuptools", "setuptools-rust", "wheel"]
build-backend = "setuptools.build_meta"

# If you find some configurations are similar to what qiskit does,
# yes, it does. I 'learned' from them.

[project]
name = "qurry"
dynamic = ["version", "readme", "dependencies"]
description = "Qurry ðŸ› - The Measuring Tool for Renyi Entropy, Loschmidt Echo, and Magnetization Squared, The Library of Some Common Cases"
authors = [{ name = "Huai-Chung Chang", email = "harui2019@proton.me" }]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.9"

[project.urls]
Issues = "https://github.com/harui2019/qurrium/issues"
Homepage = "https://github.com/harui2019/qurrium"

[tool.setuptools.packages.find]
include = ['qurry*', 'qurry.capsule*']
exclude = ['cmake', 'symengine', 'tests']

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "qurry/VERSION.txt" }
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = { file = "requirements.txt" }


[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
skip = [
    "*-musllinux_i686", # rust tier 2 support, qiskit did not support musllinux
    "pp*",              # Qiskit and Qurry are not pure python packages, See https://github.com/harui2019/qurry/issues/93#issuecomment-1801837481
    "cp38-*",           # Not support and won't support for we write type hint in 3.9 syntax.
    "cp313-*",          # Just too recent
    "*-musllinux_*",    # qiskit did not support musllinux
    # "*-manylinux_i686", # scipy dependency issue, Check issue https://github.com/harui2019/qurry/issues/93 for details
]
test-skip = "*win32 *linux_i686"
environment = { PATH = "$HOME/.cargo/bin:$PATH", RUSTUP_TOOLCHAIN = "stable" }
before-build = [
    'echo "======================================================================"',
    'echo "### Building ........................................................."',
    'echo "======================================================================"',
    "which python",
    "pip install --upgrade pipenv wheel pip",
    "pip install --upgrade auditwheel auditwheel-symbols delocate",
    "pip install --upgrade setuptools_rust Cython setuptools toml wheel",
]
before-test = [
    "echo ''",
    'echo "======================================================================"',
    'echo "### Testing Environment Preparing ...................................."',
    'echo "======================================================================"',
    "pip install --prefer-binary --only-binary=numpy,scipy numpy scipy",
    "pip install pytest",
    "cd {project} && pip install . --upgrade && cd ..",
    'echo "======================================================================"',
    'echo "### Test Start ......................................................."',
    'echo "======================================================================"',
    "echo ''",
]
test-command = ["pytest {project}/tests"]

[tool.cibuildwheel.linux]
before-all = [
    "echo ''",
    'echo "| Clear .so files"',
    "find . -name '*.so' -delete",
    "find . -wholename '*/build' | xargs rm -rf",
    "find . -name 'dist' && rm -rf dist",
    "find . -name 'qurry.egg-info' && rm -rf qurry.egg-info",
    "find . -wholename '*/__pycache__' | xargs rm -rf",
    "find . -name 'target' && rm -rf target",
    "echo ''",
    'echo "======================================================================"',
    'echo "### Linux Setup ......................................................"',
    'echo "======================================================================"',
    "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=nightly --profile=minimal -y",
    'source "$HOME/.cargo/env"',
    "rustup show",
]

[tool.cibuildwheel.macos]
# environment = "MACOSX_DEPLOYMENT_TARGET=10.12"
before-all = [
    "echo ''",
    'echo "| Clear .so files"',
    "find . -name '*.so' -delete",
    "find . -wholename '*/build' | xargs rm -rf",
    "find . -name 'dist' && rm -rf dist",
    "find . -name 'qurry.egg-info' && rm -rf qurry.egg-info",
    "find . -wholename '*/__pycache__' | xargs rm -rf",
    "find . -name 'target' && rm -rf target",
    "echo ''",
    'echo "======================================================================"',
    'echo "### MacOS Setup ......................................................"',
    'echo "======================================================================"',
    # "export PYO3_CROSS_LIB_DIR=$(which python | sed 's|/bin/python|/lib/python|')$(python -c 'import sys; print(str(sys.version_info[0]) + \".\" + str(sys.version_info[1]))')",
    # "echo $PYO3_CROSS_LIB_DIR",
    # 'echo "----------------------------------------------------------------------"',
    "curl https://sh.rustup.rs -sSf | bash -s -- --default-toolchain=nightly --profile=minimal -y",
    'source "$HOME/.cargo/env"',
    "rustup show",
    # "rustup target add aarch64-apple-darwin",
]

[tool.cibuildwheel.windows]
# PowerShell script
# before-all = [
#     'Write-Host "Downloading..."',
#     "Invoke-WebRequest -Uri https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe -OutFile rustup-init.exe",
#     'Write-Host "Installing Rust..." -ForegroundColor Cyan',
#     'Start-Process -FilePath .\rustup-init.exe -ArgumentList "--default-toolchain nightly --profile minimal -y" -NoNewWindow -Wait',
#     'Remove-Item .\rustup-init.exe',
#     '$env:Path = "$env:USERPROFILE\.cargo\bin"',
#     "rustup show",
# ]

# CMD script
before-all = [
    "echo.",
    'echo "| Clear .so files"',
    'for /r %i in (*.so) do del %i',
    'rmdir /s /q build',
    'rmdir /s /q dist',
    'rmdir /s /q qurry.egg-info',
    'rmdir /s /q qurry\__pycache__',
    'rmdir /s /q qurry\capsule\__pycache__',
    'rmdir /s /q target',
    "echo ''",
    'echo "======================================================================"',
    'echo "### Windows Setup ...................................................."',
    'echo "======================================================================"',
    "echo Downloading...",
    "curl -o rustup-init.exe https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe",
    "echo Installing Rust...",
    "rustup-init.exe --default-toolchain nightly --profile minimal -y",
    "del rustup-init.exe",
    'set PATH=%USERPROFILE%\.cargo\bin;%PATH%',
    "rustup show",
]
before-build = [
    'echo "======================================================================"',
    'echo "### Building ........................................................."',
    'echo "======================================================================"',
    "python -m pip install --upgrade pipenv wheel pip",
    "python -m pip install --upgrade auditwheel auditwheel-symbols",
    "python -m pip install --upgrade setuptools_rust Cython setuptools toml wheel",
]
before-test = [
    "echo ''",
    'echo "======================================================================"',
    'echo "### Testing Environment Preparing ...................................."',
    'echo "======================================================================"',
    "python -m pip install scipy",
    "python -m pip install pytest",
    "cd {project} && python -m pip install . --upgrade && cd ..",
    'echo "======================================================================"',
    'echo "### Test Start ......................................................."',
    'echo "======================================================================"',
    "echo ''",
]

[tool.pylint."messages control"]
disable = [
    "too-many-lines",
    "too-many-branches",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-public-methods",
    "too-few-public-methods",
    "too-many-ancestors",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
