[package]
name = "qurry_boorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qurry_boorust"
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
serde_json = "1.0.103"
rayon = "1.8.0"

[dependencies.pyo3]
version = "0.20.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]